--- a/music-critics/before-impression-chinese-music.html
+++ b/music-critics/before-impression-chinese-music.html
@@ -33,16 +33,19 @@
 		<p>20世纪以来，随着西风东渐，西方中心论在思想文化领域兴起，中国传统文化受到冷落，民族音乐的发展与创新步伐缓慢。本人一度深切地感受到国内传统音乐的发展完全不能与这个日新月异的时代相适应。</p>
 		<p>许多人也许和我一样醉心于喜多郎的《丝绸之路》和Pacific Moon等中国风New age。 我至今都很好奇为什么像喜多郎、京田诚一这样的日本音乐人能写出这么赋有中国韵味却又充满现代感的乐曲，他们的作品甚至到现在还被国内大量古装影视剧反复地用作插曲。每当我听到NHK纪录片《故宫》的主题曲——由S.E.N.S创作的“故宫之回忆”时，都不禁感叹日本人写出的作品竟能如此准确精妙的表达出故宫六百年的沧桑和厚重感。</p>
 		
-		<iframe height=240 width=320 src="http://player.youku.com/embed/XMzU0MTc1Mjg0" frameborder=0 allowfullscreen></iframe><br/><br/>
+		<!--iframe height=240 width=320 src="http://player.youku.com/embed/XMzU0MTc1Mjg0" frameborder=0 allowfullscreen></iframe-->
+		<video src="assets/videos/matsuri.mp4" controls="controls" height="240" width="320"></video><br/><br/>
 		喜多郎现场版《响宴》<p></p>
 
-		<iframe height=240 width=320 src="http://player.youku.com/embed/XMjg4MTMwMzc2" frameborder=0 allowfullscreen></iframe><br/>
+		<!--iframe height=240 width=320 src="http://player.youku.com/embed/XMjg4MTMwMzc2" frameborder=0 allowfullscreen></iframe><br/-->
+		<video src="assets/videos/palace_memory.mp4" controls="controls" height="240" width="320"></video><br/><br/>
 		故宫的记忆<p/>
 		
 		<p>读大学时曾经很痴迷PacificMoon，尤其对其中的《翔》、《葵》等以中国乐器为主打的专辑爱不释耳，在研究了这些专辑的台前幕后之后，赫然发现原来中国有一大批像贾鹏芳、邵容、吴汝俊这样的民族器乐大师东渡日本，在日本更上层楼，并迎来在艺术事业上的巅峰。他们的作品向国人展现了民族音乐的不同面相。在接触了这些以中国元素为主的日本new age以后，我很疑惑为什么中国传统音乐长期无法在新的时代背景下结出具有新鲜感的果实。</p>
 
-		<iframe height=240 width=320 src="http://player.youku.com/embed/XMzA4MDA1NzMy" frameborder=0 allowfullscreen></iframe><br/>
-		贾鹏芳赴日20周年纪念音乐会上演奏的《睡莲》，京田诚一作曲<br/><br/>
+		<!--iframe height=240 width=320 src="http://player.youku.com/embed/XMzA4MDA1NzMy" frameborder=0 allowfullscreen></iframe><br/-->
+		<video src="assets/videos/slient_moon.mp4" controls="controls" height="240" width="320"></video><br/><br/>
+		贾鹏芳赴日20周年纪念音乐会上演奏的《宁月》，京田诚一作曲<br/><br/>
 		
 		<audio src="assets/audios/wild-rose.mp3"  controls="controls">您的浏览器不支持 audio 标签。</audio><br/>
 		绍荣在和平之月专辑《葵》中的《Wild Rose》<br/><br/>
@@ -72,7 +75,8 @@
 		<img src="assets/img/yxlj.jpg"/><br/>
 		印象丽江剧照<br/><br/>
 		
-		<iframe height=240 width=320 src="http://player.youku.com/embed/XMjcxNjU1MTI0" frameborder=0 allowfullscreen></iframe><br/>
+		<!--iframe height=240 width=320 src="http://player.youku.com/embed/XMjcxNjU1MTI0" frameborder=0 allowfullscreen></iframe><br/-->
+		<video src="assets/videos/west_lake.mp4" controls="controls" height="240" width="320"></video><br/><br/>
 		张靓颖，喜多郎现场版-印象西湖雨<br/><br/>
 
 		<p>在这个大的趋势与背景下，作为中国民族音乐最高艺术殿堂的中央民族乐团自然无法自外，唯有突破传统的窠臼，推陈出新，才能引领传统音乐的发展。于是从2007年开始，中央民族乐团以敦煌壁画中复原的古乐器为主题，经过6年的精心策划与磨砺，完成了堪称鸿篇巨制的民族乐舞台剧《印象国乐》，并于2013年8曰在国家大剧院如期上演。该剧的总导演正是“印象铁三角”之一的王潮歌。据王潮歌讲述，由于对民族音乐理解不够深刻，她起初并不愿意担任导演。但是在接触了中央民族乐团团长席强，以及各位器乐演奏家之后，她被大家渴望复兴民族文化的强烈热情和责任感所感染，最终决定以一元钱的报酬担任总导演一职。她希望通过自己和艺术家们的共同努力，来唤回国人的文化认同和民族自信，促进民族音乐的推广和继承。</p>
