Change image width to 100%

--- a/music-critics/before-impression-chinese-music.html
+++ b/music-critics/before-impression-chinese-music.html
@@ -54,9 +54,9 @@
         <p>好在近年来，随着国力提升，国人丢失的文化自信被逐步找回，中国民族音乐的发展出现了新的面貌。国内许多民族音乐人开始了对传统音乐呈现方式的思索，探讨，实践和创新。在戏曲界出现了像《皇家粮仓》厅堂版昆曲这样既叫好又叫座的小剧场，储兰兰新世纪风格的《新京剧》专辑。器乐表演上出现了冯晓泉，曾格格所倡导的“新民乐”。声乐上甚至有像龚琳娜这样的怪咖神曲。且不论大众的接受程度如何，民族音乐至少展现了它本应具有的多元呈现方式。</p>
 		
 		<p>
-		<img src="assets/img/opera1.jpg"/><br/>
-		<img src="assets/img/opera2.jpg"/><br/>
-		<img src="assets/img/opera3.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/opera1.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/opera2.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/opera3.jpg"/><br/>
 		皇家粮仓厅堂版本牡丹亭</p>
 		
 		<p>
@@ -68,11 +68,11 @@
 		
 		<p>在现场表演领域近年来最值得称道的莫过于由铁三角张艺谋，王潮歌，樊跃共同执导的印象系列。 《印象西湖》，《印象丽江》，《印象大红袍》，《印象刘三姐》等一系列佳作利用实人实景结合声光电N位一体的舞台元素，营造出或典雅或磅礴的艺术氛围，堪称难得的大手笔。他们不仅撬动了以传统文化为载体的巨大文化市场，更开辟出了一条新时期传统艺术发展的新路。</p>
 		
-		<img src="assets/img/yxxh1.jpg"/><br/>
-		<img src="assets/img/yxxh2.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/yxxh1.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/yxxh2.jpg"/><br/>
 		印象西湖剧照<br/><br/>
 		
-		<img src="assets/img/yxlj.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/yxlj.jpg"/><br/>
 		印象丽江剧照<br/><br/>
 		
 		<!--iframe height=240 width=320 src="http://player.youku.com/embed/XMjcxNjU1MTI0" frameborder=0 allowfullscreen></iframe><br/-->
@@ -82,9 +82,9 @@
 		<p>在这个大的趋势与背景下，作为中国民族音乐最高艺术殿堂的中央民族乐团自然无法自外，唯有突破传统的窠臼，推陈出新，才能引领传统音乐的发展。于是从2007年开始，中央民族乐团以敦煌壁画中复原的古乐器为主题，经过6年的精心策划与磨砺，完成了堪称鸿篇巨制的民族乐舞台剧《印象国乐》，并于2013年8曰在国家大剧院如期上演。该剧的总导演正是“印象铁三角”之一的王潮歌。据王潮歌讲述，由于对民族音乐理解不够深刻，她起初并不愿意担任导演。但是在接触了中央民族乐团团长席强，以及各位器乐演奏家之后，她被大家渴望复兴民族文化的强烈热情和责任感所感染，最终决定以一元钱的报酬担任总导演一职。她希望通过自己和艺术家们的共同努力，来唤回国人的文化认同和民族自信，促进民族音乐的推广和继承。</p>
 
 		<p>
-		<img src="assets/img/impression1.jpg"/><br/>
-		<img src="assets/img/impression3.jpg"/><br/>
-		<img src="assets/img/impression2.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/impression1.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/impression3.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/impression2.jpg"/><br/>
 		《印象国乐》首演剧照</p>
 		
 		<h2>历史篇——听千年之音，品汉风唐韵</h2>
@@ -96,11 +96,11 @@
 		<p>根据《宋书.乐志》记载，宋太宗赵匡义不仅是一位杰出的作曲家还是一位演奏家，他甚至亲手制作阮，将阮的形制从四弦更改为五弦，用于独奏和合奏，并谱写了148首阮曲，广为流传。《旧唐书》和《新唐书·礼乐志》记载，唐玄宗李隆基精通音律，他的词曲不仅高产，而且创作在同时代全世界范围内都中堪称极品，他创作的《凌波曲》，《雨霖铃》，《霓裳羽衣曲》等著名乐曲虽然大部分已失传，但仍然有少量曲目的片段通过各种形式流传至今。他擅长的乐器相当多，尤其擅长玉笛和羯鼓演奏，唐南卓在《羯鼓录》中曾评价他的演奏“若制作曲词，随音即成，不立章度，取适短长，皆应散声，皆中点拍”，由此可见，玄宗对打击乐演奏颇有造诣。玄宗开创开元盛世，历经安史之乱，马嵬坡之变，做了6年的苦闷的太上皇，历史对他的评价毁誉参半。然而对于中国的文化艺术的发展而言，唐玄宗绝对做出了巨大的贡献。他设立“鼓吹署”这样的专属行政机构，从事宫廷礼仪活动的管理。建立“梨园”进行音乐人才选拔，这成为了“梨园子弟”一词的由来。成立“大乐署”进行乐工考核官方机构，扩充“教坊”这样的音乐教育机构进行各类乐器的教学，其涵盖的乐器之广见诸于大量的史料文献中。</p>
 		
 		<p>
-		<img src="assets/img/jiegu.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/jiegu.jpg"/><br/>
 		羯鼓</p>
 		
 		<p>
-		<img src="assets/img/ruan.jpg"/><br/>
+		<img style="width:100%;" src="assets/img/ruan.jpg"/><br/>
 		阮</p>
 
 
@@ -113,7 +113,7 @@
 		<p>敦煌莫高窟始建于前秦十六国，隋唐进入全盛时期，到元代为止，历经了1700余年的修建。元以后随着丝绸之路的衰落而淡出了人们的视线。莫高窟以精美的彩绘壁画著称，其中又以唐代壁画的精美程度为最。而在唐代壁画中大量的佛教壁画都记录了当时乐器的外观和形态，这为当代研究人员还原这些乐器提供了绝佳的一手素材。</p>
 		
 		<p>
-		<img src="assets/img/dunhuang.gif"/><br/>
+		<img style="width:100%;" src="assets/img/dunhuang.gif"/><br/>
 		敦煌壁画中的中国古乐器</p>
 		
 		<p>敦煌艺术研究院的研究员庄壮先生，倾注40余年的研究心血，致力于敦煌壁画乐器的复原工作。他的古乐器复原之路充满艰辛，敦煌乐器的复制并非简单依瓢画葫芦，除了对外观的要求，还原乐器的必须达到上佳演奏效果，体现当时的历史情境。经过和中央民族乐团几上海民族乐器生产厂商的合作努力，终于复原出65项共计74件敦煌乐器。而《印象国乐》正是这些研究成果的集中展示。令人遗憾的是庄壮先生并未等到《印象国乐》在国家大剧院的首演就因心脏病与世长辞。</p>
