Add date to the article.

--- a/music-critics/before-impression-chinese-music.html
+++ b/music-critics/before-impression-chinese-music.html
@@ -16,8 +16,9 @@
 <div data-role="page" class="jqm-demos" data-quicklinks="true">
 
 	<div data-role="header" class="jqm-header">
-        <h2><a href="./" title="听随寓而安闲话"><img src="assets/img/logo.jpg" alt="听随寓而安闲话"></a></h2>
+    <h2><a href="./" title="听随寓而安闲话"><img src="assets/img/logo.jpg" alt="听随寓而安闲话"></a></h2>
 		<!--p><span class="jqm-version"></span> Demos</p-->
+    <p>2014年4月27日 晨</p>
 		<a href="#" class="jqm-navmenu-link ui-btn ui-btn-icon-notext ui-corner-all ui-icon-bars ui-nodisc-icon ui-alt-icon ui-btn-left">Menu</a>
 		<a href="#" class="jqm-search-link ui-btn ui-btn-icon-notext ui-corner-all ui-icon-search ui-nodisc-icon ui-alt-icon ui-btn-right">Search</a>
 	</div><!-- /header -->
@@ -25,8 +26,7 @@
 	<div role="main" class="ui-content jqm-content">
 
 		<h1>写在《印象国乐》之前</h1>
-
-		<p>4月27日，由中央民族乐团历时7年打造的大型民族乐舞台剧《印象国乐》将在上海文化广场上演。这是该剧继国家大剧院的首演之后的第二站演出。今年2月份，在央视3台播出的《文化视点》栏目中，总导演王潮歌女士曾率主要演出人员对该剧的来龙去脉做过详细介绍。看完那期节目我相当的感动，也对此剧充满期待。在将进一个月的等待之后终于有机会能一睹该剧真容，颇为激动。在观赏之前感受繁多，胡乱写下观前感。</p>
+		<p>4月27日，由中央民族乐团历时7年打造的大型民族乐舞台剧《印象国乐》将在上海文化广场上演。这是该剧继国家大剧院的首演之后的第二站演出。今年2月份，在央视3台播出的《文化视点》栏目中，总导演王潮歌女士曾率主要演出人员对该剧的来龙去脉做过详细介绍。看完那期节目我相当的感动，也对此剧充满期待。在将近一个月的等待之后终于有机会能一睹该剧真容，颇为激动。在观赏之前感受繁多，胡乱写下观前感。</p>
 
 		<h2>背景篇——文化的转折</h2>
 
@@ -142,8 +142,8 @@
 
 
 	<div data-role="footer" data-position="fixed" data-tap-toggle="false" class="jqm-footer">
-		<p>jQuery Mobile Demos version <span class="jqm-version"></span></p>
-		<p>Copyright 2014 The jQuery Foundation</p>
+		<p>听随寓而安闲话</p>
+		<p>Copyright 2014 随寓而安</p>
 	</div><!-- /footer -->
 	<!-- TODO: This should become an external panel so we can add input to markup (unique ID) -->
     <div data-role="panel" class="jqm-search-panel" data-position="right" data-display="overlay" data-theme="a">
