--- a/music-critics/index.html
+++ b/music-critics/index.html
@@ -72,7 +72,7 @@
 
 	<div data-role="footer" data-position="fixed" data-tap-toggle="false" class="jqm-footer">
 		<p>听随寓而安闲话 version 0.1.0</p>
-		<p>Copyleft 2014 随寓而安</p>
+		<p>Copyright 2014 随寓而安</p>
 	</div><!-- /footer -->
 	<!-- TODO: This should become an external panel so we can add input to markup (unique ID) -->
     <div data-role="panel" class="jqm-search-panel" data-position="right" data-display="overlay" data-theme="a">
