--- a/music-critics/article.html
+++ b/music-critics/article.html
@@ -29,8 +29,9 @@
         <h3>乐评</h3>
         <ul>
           <li><a href="article.html#time" date="2012年4月28日 00:47" data-ajax="false">Con te partirò</a></li>
-          <li><a href="article.html#yanni" data-ajax="false">Yanni与New age</a></li>
+          <li><a href="yanni.html" data-ajax="false">Yanni与New age</a></li>
           <li><a href="article.html#impression" date="2014年4月27日 晨" data-ajax="false">写在《印象国乐》之前</a></li>
+          <li><a href="article.html#yanni" date="2014年7月27日 晨" data-ajax="false">One man's dream</a></li>
         </ul>
       </li>
       <li data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" data-iconpos="right" data-inset="false">
