--- a/music-critics/yanni.html
+++ b/music-critics/yanni.html
@@ -1,4 +1,4 @@
-<h1>One man's dream</h1>
+<h1>One man's dream(稿)</h1>
 
 <p>
 "Everything great that has ever happened to humanity, since the beginning, has begun as a single thought in someone's mind. And if any one of us, is capable of such a great thought, then all of us have the same capacity, capability, because we're all the same." 有史以来，人类所有的伟大，都是从某个人的脑中开始孕育的。如果我们当中任何人有这样的伟大思想，那么其实我们每一个人就都拥有同样力量与能力。因为，我们都是一样的。
@@ -14,24 +14,29 @@
 
 <br>
 <p>
-音乐鬼才Yanni被誉为当代最具影响力的作曲大师，他所创作的无数作品在世界范围内广泛传播。他的大量作品都堪称经典，白听不厌。其作品风格跨度之大在音乐界异常罕见。Yanni的作品中有《Santorini》《Tribute》《Adagio in C Minor》这样的交响音诗与交响音画，有《Renegade》《Dance with a stranger》《The rain must fall》《With acttraction》把独奏乐器发挥到极致的现代派作品，也有《Nightingale》《Orchid》《Prelude》这样充满东方神韵和神秘色彩的民族风大作，而《one man's dream》《In the mirror》《Felitsa》则是春风细雨，无限柔情。
+音乐鬼才Yanni被誉为当代最具影响力的作曲大师，他所创作的大量作品在世界范围内广泛传播。不少作品堪称经典，白听不厌。Yanni作品风格跨度之大在音乐界异常罕见。其中有《Santorini》《Tribute》《Adagio in C Minor》这样的交响音诗与交响音画，有《Renegade》《Dance with a stranger》《The rain must fall》《With acttraction》把独奏乐器发挥到极致的现代派作品，也有《Nightingale》《Orchid》《Prelude》这样充满东方神韵和神秘色彩的民族风大作，而《one man's dream》《In the mirror》《Felitsa》则是春风细雨，无限柔情。
 </p>
 
 <p>
-初识Yanni，是在98年由cctv3录播的《Tribute》雅尼紫禁城音乐会，作为故宫内举办的第一场现场音乐会，在当时的北京一票难求，可谓盛况空前。观看这档节目的时候，正值寒假的一个夜晚，父亲难得下厨做了一份酱鸭作为夜宵，母亲在一旁对酱鸭漆黑的颜色品头论足，我则是一边啃着漆黑却美味的酱鸭，一边看着电视里那个长头发浓胡子的老外陶醉地舞动着自己的双手同时操控着六台琴。此情此景给我留下极为深刻的印象。这个夜晚，我不仅记住了父亲做得酱鸭，也从此记住了Yanni那个招牌式的表演动作。若干年后，在和一位大学同学谈起Yanni的演出时，他形象的把Yanni的动作称作八爪鱼弹琴，我觉得这个戏谑称呼分外贴切。于是Yanni在的我心中又多了一个代号：八爪鱼。
+初识Yanni，是在98年由cctv3录播的《Tribute》雅尼紫禁城音乐会，作为故宫内举办的第一场现场音乐会，在当时的北京一票难求，可谓盛况空前。观看这档节目的时候，正值寒假的一个夜晚，父亲难得下厨做了一份酱鸭作为夜宵，母亲在一旁对酱鸭的颜色品头论足，我则是一边啃着酱鸭，一边看着电视里那个长头发浓胡子的老外陶醉地舞动着自己的双手，同时操控着六台琴。此情此景给我留下极为深刻的印象。这个夜晚，我不仅记住了父亲做得酱鸭，也从此记住了Yanni那个招牌式的表演动作。若干年后，在和一位大学同学谈起Yanni的演出时，他形象的把Yanni的动作称作八爪鱼弹琴，我觉得这个戏谑称呼分外贴切。于是Yanni在的我心中又多了一个代号：八爪鱼。
 <p>
 
-<img style="width:100%;" src="assets/img/yanni3.png"/><br>
+<img style="width:100%;" src="assets/img/yanni3.jpg"/><br>
 
 <p>
-Yanni音乐具有极强的带入性和画面感。 听Yanni的音乐，思绪很容易就能被带入到乐曲所要表达的情境之中，乐到伤感处听者随之悲怆，曲到兴奋时闻者随之摇摆。在雅典音乐会的live演出中，我最喜欢的莫过《The rain must fall》和《Within attraction》。《The rain must fall》中的前半部分的主旋律主要由钢琴完成，起初琴声和缓，风和日丽，渐渐地琴声节奏变换，大风刮起，电闪雷鸣。当电贝司solo响起，豆大的雨点开始落下，贝司手的速度越来越快，大雨终于狂泻而下。接着小提琴主旋律进入乐曲，犹如暴风骤雨中突然闯入了一位狂奔的少年，迎着狂风艰难奔跑。在进行了一番艰搏斗之后，大雨骤停，乐曲戈然而止。听毕全曲，聆听着仿佛亲身经历了一场狂风骤雨，惊心动魄。
+在Yanni所有现场演出中，他都是当之无愧的灵魂人物。除了作曲之外，同时还担任配器、乐手、调音师、乐团指挥甚至是报幕员。这样大的角色跨越是难以想象的，Yanni也打开了new age领域通吃台前幕后的先河。在我的印象中后来出现过的类似音乐人似乎只有日本的喜多郎。
+</p>
+
+<p>
+Yanni音乐具有极强的带入性和画面感。听Yanni的音乐，思绪很容易就能被带入到乐曲所要表达的情境之中。乐到伤感处听者随之悲怆，曲到兴奋时闻者随之摇摆。在雅典音乐会的live演出中，最让人觉得最出彩莫过于《The rain must fall》和《Within attraction》。《The rain must fall》中的前段的主旋律由钢琴完成，起初琴声和缓，风和日丽，渐渐地琴声节奏变换，大风刮起，电闪雷鸣。当电贝司solo响起，豆大的雨点开始落下，贝司手的速度越来越快，大雨终于狂泻而下。接着小提琴主旋律排闼而入，犹如在暴风雨中突然闯入了一位狂奔的少年，迎着狂风艰难奔跑。一番搏斗之后，大雨骤停，乐曲戈然而止。听毕全曲，仿佛亲身经历了一场狂风骤雨，惊心动魄。
 <iframe height=498 width=510 src="http://player.youku.com/embed/XMzI0NjQ3MTM2" frameborder=0 allowfullscreen></iframe>
 
-而乐曲《Within Attraction》仿佛描绘了一对苦情眷侣。前段小提琴合奏飞扬而欢快，正如情侣相识后自由而甜蜜的时光。突然一段手鼓响起，打破了欢快宁谧的氛围，就像世俗的质疑和家族的阻扰将这对恋人硬生生打散 。从第5分22秒开始，乐曲进入了长达三分钟的华采乐段。乐段以舒缓的小提琴声开始，如同恋人冲破万难终于偷偷得见，楠楠耳语。随后两把小提琴相互哭诉，百转千回，在经历了一番痛苦挣扎之后，两人终于决定逃离尘世束缚，双宿双飞，全曲也在此时达到了最高潮。这段华采高潮迭起，几乎呈现了小提琴演奏的所有技法，连顿弓，跳弓，断奏，拨弦连番伺候。小提琴演奏家Karen briggs和Shardad Rohani的这段演绎，呈现给大家的不仅是美妙的乐音，更令人称道的是丰富的面部表情，肢体语言，以及诙谐的斗琴画面。在全曲结束时琴手互献飞吻的画面也成为了Yanni所有live的solo表演中最为经典的一幕。
+而乐曲《Within Attraction》仿佛描绘了一对苦情眷侣。前段小提琴合奏轻快而欢乐，正如情侣相识后自由而甜蜜的时光。突然一段手鼓响起，打破了欢快宁谧的氛围，就像世俗的质疑和家族的阻扰将这对恋人硬生生打散 。从第5分22秒开始，乐曲进入了长达三分钟的华采乐段。乐段以舒缓的小提琴声开始，如同恋人冲破万难终于偷偷得见，楠楠耳语。随后两把小提琴相互哭诉，百转千回，在经历了一番痛苦挣扎之后，两人终于决定逃离世俗束缚，双宿双飞，全曲也在此时达到了最高潮。这段华采高潮迭起，几乎呈现了小提琴演奏的所有技法，连顿弓，跳弓，断奏，拨弦连番伺候。小提琴演奏家Karen briggs和Shardad Rohani的这段演绎，呈现给大家的不仅是美妙的乐音，更有丰富的面部表情和肢体语言。诙谐的斗琴画面谑而不虐，在全曲结束时琴手互献飞吻的画面也成为了Yanni所有live的solo中最为经典的一幕。
 <iframe height=498 width=510 src="http://player.youku.com/embed/XMjE1NTMwNA==" frameborder=0 allowfullscreen></iframe>
-听这两首曲子，就像品尝两道川菜，浓郁辛辣，酣畅淋漓。
+听这两首曲子，就像品尝两道香辣大餐，浓郁辛辣，酣畅淋漓。
 </p>
 
+<p>待补充内容：</p>
 <!--p>
 2012年一个偶然的时间，再次在央视春晚人物专访中看到了雅尼。此时遭受了母亲离世打击的雅尼刚从阴霾中走出，他的至爱也已离他而去。
 <p-->
